--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "F7Boielrplate",
   "main": "index.html",
   "dependencies": {
-    "gulp": "^3.9.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-sass": "^2.1.1",
-    "opn": "^3.0.3"
+    "gulp": "3.9.0",
+    "gulp-connect": "2.2.0",
+    "gulp-sass": "2.1.1",
+    "opn": "3.0.3"
   },
   "devDependencies": {},
   "scripts": {
