--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: node_js
-node_js:
-  - '0.10'
+sudo: false
 before_script:
   - 'npm install -g bower gulp'
-  - 'bower install'
+  - 'npm install'
